--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 flask==3.0.2
 flask-cors==4.0.0
-torch==2.1.2
-torchvision==0.16.2
 numpy==1.26.4
 opencv-python==4.9.0.80
 pillow==10.2.0
@@ -25,7 +23,6 @@ black==24.2.0
 pylint==3.0.3
 pytest==8.0.2
 
-# GPU support (comment out if not using CUDA)
---extra-index-url https://download.pytorch.org/whl/cu118
-torch==2.1.2+cu118 
-torchvision==0.16.2+cu118
+roboflow
+pillow
+
